--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -117,7 +117,7 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
-                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
@@ -139,7 +139,7 @@
             margin-top: 8px;
             font-size: 27px;
             left: 11px;"
-        }><a href="/saas-metrics.html"> <i class="fa fa-chevron-left" style="font-size: 13px;color:grey;" aria-hidden="true"></i></a></div>
+        }><a href="/saas-metrics/index"> <i class="fa fa-chevron-left" style="font-size: 13px;color:grey;" aria-hidden="true"></i></a></div>
             <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond"
                     src="/images/logo-crayond@2x.jpg" />&nbsp;</a>
         </div>
@@ -190,7 +190,7 @@
 
             <div id="right_side_content" class="right_side col-sm-2  col-md-5  col-lg-4  hidden-xs">
                 <div class="head_right1 fontGraphikSemibold">
-                    <a  href="/saas-metrics.html" style="color:#6f42c1;"><img src="/images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
+                    <a  href="/saas-metrics/index" style="color:#6f42c1;"><img src="/images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
                 </div>
 
 
@@ -201,56 +201,56 @@
                     </div>
 
                     <div class=" row  linksz menu1 fontLatoRegular " id="linksz" onclick="scrollWin('id1', 0)">
-                        <span class="cb-factor__item_1" id="item1"> </span><a class="article_ref" href="customer-retention-rate.html" > 1.Customer Retention Rate</a>
+                        <span class="cb-factor__item_1" id="item1"> </span><a class="article_ref" href="./customer-retention-rate" > 1.Customer Retention Rate</a>
                     </div>
                     <div class="  row linksz   menu2 fontLatoRegular" id="linksz"  onclick="scrollWin('id2', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="Burn-rate.html" style="color:#665CD7;" >  2.Burn Rate</a>
+                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="./Burn-rate" style="color:#665CD7;" >  2.Burn Rate</a>
                     </div>
                     <div class="  row linksz  menu3  fontLatoRegular" id="linksz" onclick="scrollWin('id3', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="customer-engagement-score.html" >3.Customer Engagement Score</a> 
+                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="./customer-engagement-score" >3.Customer Engagement Score</a> 
                     </div>
                     <div class="  row linksz   menu4 fontLatoRegular" id="linksz" onclick="scrollWin('id4', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="viral-coefficient.html" > 4.Viral Coefficient</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./viral-coefficient" > 4.Viral Coefficient</a> 
 
                     </div>
                     <div class="  row linksz   menu5 fontLatoRegular" id="linksz" onclick="scrollWin('id5', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="Net-promoter-score.html" > 5.Net Promoter Score</a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./Net-promoter-score" > 5.Net Promoter Score</a>
 
                     </div>
                     <div class="  row linksz  menu6  fontLatoRegular" id="linksz" onclick="scrollWin('id6', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-lifetime-value.html" > 6.Customer Lifetime Value</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./customer-lifetime-value" > 6.Customer Lifetime Value</a> 
                     </div>
                     <div class="  row linksz  menu7  fontLatoRegular" onclick="scrollWin('id7', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="average-revenue-per-account.html" > 7.Average Revenue Per Account</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./average-revenue-per-account" > 7.Average Revenue Per Account</a> 
 
                     </div>
                     <div class="  row linksz  menu8  fontLatoRegular" id="linksz" onclick="scrollWin('id8', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="lead-velocity-rate.html" > 8.Lead Velocity Rate</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./lead-velocity-rate" > 8.Lead Velocity Rate</a> 
 
                     </div>
                     <div class="  row linksz  menu9  fontLatoRegular" id="linksz" onclick="scrollWin('id9', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="monthly-recurring-revenue.html" >9.Monthly Recurring Revenue</a>
+                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="./monthly-recurring-revenue" >9.Monthly Recurring Revenue</a>
 
                     </div>
                     <div class="  row linksz  menu10  fontLatoRegular" id="linksz" onclick="scrollWin('id10', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="revenue-churn.html" > 10.Revenue Churn Rate</a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./revenue-churn" > 10.Revenue Churn Rate</a>
 
                     </div>
                     <div class="  row linksz   menu11 fontLatoRegular" id="linksz" onclick="scrollWin('id11', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="average-resolution-time.html" >11.Average Resolution Time</a>
+                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="./average-resolution-time" >11.Average Resolution Time</a>
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer Churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./customer-churn" > 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./annual-recurring-revenue" > 13.Annual Recurring Revenue </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id14', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="product-qualified-leads.html" > 14.Product Qualified Leads </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./product-qualified-leads" > 14.Product Qualified Leads </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id15', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-acqisation-cost.html" > 15.Customer Acquisition Cost </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="./customer-acqisation-cost" > 15.Customer Acquisition Cost </a>
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                                 <li style="color:#665CD7"><a style="color:#7B6A77">Try to bring in more qualified leads to compensate for the burn rate.</a></li><br />
                                     <li style="color:#665CD7"><a style="color:#7B6A77">Alternatively, considering bootstrapping or raising funds.</a></li><br />
                     </p>
-                <div class="row mobilebottom" style="display:none"  onclick ="window.location.href='customer-engagement-score.html'" >
+                <div class="row mobilebottom" style="display:none"  onclick ="window.location.href='./customer-engagement-score'" >
                   <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                     <div class="row" style="border-left: 3px solid #665CD7;">
                         <div class="col-10">
@@ -495,13 +495,13 @@
             <div class="container ">
                 <div class="row response-xs" style="display: none;">
                     <div class="privacy col-sm-6 col-xs-6">
-                        <a href="/privacy.html" style="color: #43434b;" class="pri">
+                        <a href="/privacy" style="color: #43434b;" class="pri">
                             <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">
                                 Privacy</p>
                         </a>
                     </div>
                     <div class="gdpr col-sm-6 col-xs-6">
-                        <a href="/gdpr.html" style="color: #43434b;" class="pri1">
+                        <a href="/gdpr" style="color: #43434b;" class="pri1">
                             <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR
                             </p>
                         </a>
