--- a/saas-metrics/annual-recurring-revenue.html
+++ b/saas-metrics/annual-recurring-revenue.html
@@ -117,7 +117,7 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
-                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
@@ -139,7 +139,7 @@
             margin-top: 8px;
             font-size: 27px;
             left: 11px;"
-        }><a href="/saas-metrics.html"> <i class="fa fa-chevron-left" style="font-size: 13px;color:grey;" aria-hidden="true"></i></a></div>
+        }><a href="/saas-metrics/index"> <i class="fa fa-chevron-left" style="font-size: 13px;color:grey;" aria-hidden="true"></i></a></div>
             <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond"
                     src="/images/logo-crayond@2x.jpg" />&nbsp;</a>
         </div>
@@ -165,7 +165,7 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
-                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
@@ -190,7 +190,7 @@
 
             <div id="right_side_content" class="right_side col-sm-2  col-md-5  col-lg-4  hidden-xs">
                 <div class="head_right1 fontGraphikSemibold">
-                    <a  href="/saas-metrics.html"style="color:#6f42c1;"><img src="/images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
+                    <a  href="/saas-metrics/index"style="color:#6f42c1;"><img src="/images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
                 </div>
 
 
