worked on locus care page

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -176,7 +176,7 @@
     <!-- header completed -->
 
     <!-- first section -->
-    <div class="container" >
+    <div class="container first_se" >
 
         <div class="row frst_title">
             <div class="locus_title col-12">
@@ -232,7 +232,7 @@
         </div>
     </div>
 
-    <div class="container section_2" >
+    <div class="container-fluid section_2" style="padding: 0px 94px;" >
        
        <div class="dotted_red" style="background: url(images/Locuscare\ Assessts/reddot.svg);background-repeat:no-repeat; background-position-x: left;background-position:2% 82%; background-size: 20%;">
        <img src="images/Locuscare Assessts/Group 5202.png"
