--- a/Locuscare.html
+++ b/Locuscare.html
@@ -470,7 +470,7 @@
         </div>
     </div>
 </div>
-        <div class="container-fluid web_launch" style="background: #2B2756;margin-top:8%">
+        <div class="container-fluid web_launch" style="background: #2B2756;margin-top:8%;height:600px">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-5"
                     style="margin-top:2%;padding: 5% 2% 5% 10%;">
