worked on responsive edit

--- a/casestudy.html
+++ b/casestudy.html
@@ -196,7 +196,7 @@
             </div>
         </div>
     </div>
-    <div class="whole_div" style="background: url(images/Locuscare\ Assessts/red.svg); background-repeat:no-repeat; background-position:left; background-size: 17%;background-position:15% 145%;">
+    <div class="whole_div">
     <div class="container section_locus">
           <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-7">
