--- a/csk.html
+++ b/csk.html
@@ -24,23 +24,23 @@
     <meta name="theme-color" content="#334ac0">
 
     <title>CSK case study page</title>
-    <meta name="description" content="Trending SaaS Metrics to make a big difference to your business down the line.">
+    <meta name="description" content="">
     <link rel="canonical" href="https://www.crayond.com/saas-metrics" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
     <meta property="og:url" content="https://www.crayond.com/saas-metrics">
-    <meta property="og:title" content="Crayond - Learn SaaS Metrics That Matter " />
+    <meta property="og:title" content="" />
     <meta property="og:description"
-        content="Trending SaaS Metrics to make a big difference to your business down the line." />
+        content="" />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayond - Learn SaaS Metrics That Matter ">
+    <meta name="twitter:title" content="">
     <meta name="twitter:description"
-        content="Trending SaaS Metrics to make a big difference to your business down the line.">
+        content="">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
