worked on title tages

--- a/csk.html
+++ b/csk.html
@@ -25,12 +25,12 @@
 
     <title>CSK case study page</title>
     <meta name="description" content="">
-    <link rel="canonical" href="https://www.crayond.com/saas-metrics" />
+    <link rel="canonical" href=" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/saas-metrics">
+    <meta property="og:url" content="">
     <meta property="og:title" content="" />
     <meta property="og:description"
         content="" />
