worked on the page with web responsive

--- a/csk.html
+++ b/csk.html
@@ -177,7 +177,7 @@
     <!-- header completed -->
     <!-- college starts here -->
 
-    <div class="head_container" style="overflow-x: hidden !important;">
+     <div class="head_container" style="overflow-x: hidden !important;">
         <!-- CSK Head Content Page -->
         <div style="background: url('images/csk assets/yellowdot.svg'); background-repeat:no-repeat !important;background-position: 14% 0%;">
         <div class="row col-sm-12 col-xs-12 col-md-10 col-lg-10 col-xl-10 index_head" style="margin-top:100px;">
@@ -256,7 +256,7 @@
                             <div class="row" style="justify-content:center;margin:auto">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
                                     <div style="background: url('images/csk assets/reddot.svg'); background-repeat:no-repeat !important;background-position: 0% 100%;">  
-                                    <p class="understanding_details" style="">The key challenge was to understand user behavior
+                                    <p class="understanding_details" >The key challenge was to understand user behavior
                                         and craft a beautiful front end experience for avid fans. The website design and
                                         user experience had to capture the emotion of team spirit and solidarity.</p>
                                 </div>
@@ -307,7 +307,7 @@
                 <div class="col-12 rebranding_head">
                     <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10 rebranding_child">
                         <p class="rebranding_text fontGraphikBold">Rebranding</p>
-                        <p class=" rebranding_content" style="">Being CSK fans
+                        <p class=" rebranding_content" >Being CSK fans
                             ourselves
                             made it easy to understand
                             the emotion evoked
