worked on mobile responsive

--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -435,7 +435,7 @@
                                     aria-hidden="true" class="fafaicons"></i></a></p>
                         </div>
                         <div class="col-5">
-                            <div><img class="svg_right8" src="/images/topsvg.svg" style="fill:#135F40 ;" alt="dottedsvg">
+                            <div><img class="svg_right8" src="/images/topsvg.svg" style="fill:#ffffff ;" alt="dottedsvg">
                             </div>
                             <div>
                                 <p class="number8">08</p>
