worked on changes in csk

--- a/casestudy.html
+++ b/casestudy.html
@@ -264,7 +264,11 @@
                   <button type="button" class="btn_web_2">UI&UX</button>
               </div>
           </div>
-          
+          <div class="row link">
+            <div class="col-12 view">
+               <a class="view_link" href="/csk.html">View casestudy<i class="fas fa-arrow-right arrow"></i></a>
+            </div>
+        </div>
 
 
         </div>
@@ -296,7 +300,11 @@
                   <button type="button" class="btn_web_21">UI&UX</button>
               </div>
           </div>
-    
+          <div class="row link">
+            <div class="col-12 view">
+               <a class="view_link" href="/managedcare.html">View casestudy<i class="fas fa-arrow-right arrow"></i></a>
+            </div>
+        </div>
 
 
         </div>
