--- a/opportunities.html
+++ b/opportunities.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://www.crayond.com/opportunities"> 
     <meta property="og:title" content="Join Crayon'd -  Give life to New Product Ideas" /> 
     <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
-    <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
+    <meta property="og:image"  content="https://crayond.com/images/OGImage.jpg" />
     
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
@@ -200,7 +200,7 @@
                 <div class="row" style="padding: 0;overflow: hidden;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6" style="display: flex;">
                         <div class="img_section">
-                            <img alt="Modern-Engineering" class="sale sale1 active_cont image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/clarity.png" />
+                            <img alt="Modern-Engineering" class="sale sale1 active_cont image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="/images/01_clarity.png" />
                             <img alt="Modern-Engineering" class="sale sale2 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/culture.png" />
                             <img alt="Modern-Engineering" class="sale sale3 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/competence.png" />
                             <img alt="Modern-Engineering" class="sale sale4 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/commitment.png" />
@@ -411,19 +411,19 @@
             <div class="row">
                 <div class="col-5 col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 image_div">
                     <!-- <img src="https://source.unsplash.com/random/469x405" /> -->
-                    <img src="./images/team_activity_2.png" />
+                    <img alt="activity_2" src="./images/team_activity_2.png" />
                 </div>
                 <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7 image_div">
                     <!-- <img src="https://source.unsplash.com/random/713x405" /> -->
-                    <img src="./images/team_activity_3.png" />
+                    <img alt="activity_3" src="./images/team_activity_3.png" />
                 </div>
                 <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7 image_div">
                     <!-- <img src="https://source.unsplash.com/random/713x405" /> -->
-                    <img src="./images/team_activity_1.png" />
+                    <img  alt="activity_1" src="./images/team_activity_1.png" />
                 </div>
                 <div class="col-5 col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 image_div">
                     <!-- <img src="https://source.unsplash.com/random/469x324" /> -->
-                    <img src="./images/team_activity_4.png" />
+                    <img alt="activity_4" src="./images/team_activity_4.png" />
                 </div>
                 <!-- <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7" style="padding: 0;display: flex;">
                     <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 image_div">
