worked on changes

--- a/casestudy.html
+++ b/casestudy.html
@@ -23,22 +23,23 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>Crayond -Case study</title>
-    <meta name="description" content="Crayond-casestudy">
-    <link rel="canonical" href="https://www.crayond.com/saas-metrics" />
-
+    <title>Case Studies | Crayon'd</title>
+    <meta name="description" content="Know about our client's success stories here. Leading companies from all industries trust us for building their products.">
+    <link rel="canonical" href="https://www.crayond.com/case-studies"/>
     <!-- Og meta dates -->
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website" /> 
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/saas-metrics">
-    <meta property="og:title" content="Crayond-casestudy" />
-    <meta property="og:description" content="Crayond-casestudy." />
-    <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
+    <meta property="og:url" content="https://www.crayond.com/case-studies">
+    <meta property="og:title" content="Case Studies | Crayon'd" />
+    <meta property="og:description" content="Know about our client's success stories here. Leading companies from all industries trust us for building their products." />
+     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
+    
+    
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayond-casestudy">
-    <meta name="twitter:description" content="Crayond-casestudy">
+    <meta name="twitter:title" content="Case Studies | Crayon'd">
+    <meta name="twitter:description" content="Know about our client's success stories here. Leading companies from all industries trust us for building their products.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
@@ -225,7 +226,7 @@
 
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 img_edit"style=" background: url(images/Locuscare\ Assessts/reddot.svg);background-repeat:no-repeat; background-position-x: left;background-position:-30% 87%; background-size: 40%;position:relative">
-                  <img class="edited1_img" src="images/edited1.png">
+                  <img class="edited1_img" alt="edited" src="images/edited1.png">
             </div>
           </div>
     </div>
@@ -273,7 +274,7 @@
 
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 edit_2">
-            <img class="edited2_img" src="images/Group 6221.png"style="overflow-y:hidden;">
+            <img class="edited2_img" alt="img6221" src="images/Group 6221.png"style="overflow-y:hidden;">
       </div>
     </div>
 </div>
@@ -309,7 +310,7 @@
 
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 edit_3">
-            <img class="edited3_img" src="images/Group 6500.png">
+            <img class="edited3_img" alt="group6500" src="images/Group 6500.png">
       </div>
     </div>
 </div>
