--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./images/favicon_crayond.png">
+    <link rel="shortcut icon" href="/images/favicon_crayond.png">
 
     <!-- 4.0.0 bootstrap -->
     <link rel="stylesheet" href="/plugin/4.0.0_bootstrap.min.css">
