worked in pages

--- a/casestudy.html
+++ b/casestudy.html
@@ -219,7 +219,8 @@
                 </div>
                 <div class="row link">
                     <div class="col-12 view">
-                       <a class="view_link" href="Locuscare.html">View casestudy<i class="fas fa-arrow-right arrow"></i></a>
+                       <a class="view_link" href="Locuscare.html">READ MORE
+                           <i class="fas fa-arrow-right arrow"></i></a>
                     </div>
                 </div>
 
@@ -267,7 +268,7 @@
           </div>
           <div class="row link">
             <div class="col-12 view">
-               <a class="view_link" href="/csk.html">View casestudy<i class="fas fa-arrow-right arrow"></i></a>
+               <a class="view_link" href="/csk.html">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
             </div>
         </div>
 
@@ -303,7 +304,7 @@
           </div>
           <div class="row link">
             <div class="col-12 view">
-               <a class="view_link" href="/managedcare.html">View casestudy<i class="fas fa-arrow-right arrow"></i></a>
+               <a class="view_link" href="/managedcare.html">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
             </div>
         </div>
 
