--- a/ebooks.html
+++ b/ebooks.html
@@ -102,7 +102,7 @@
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics </a>
+                                10px;margin-left:10px !important;border-bottom: 1px solid #6c757d1f;">Saas Metrics </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
