--- a/managedcare.html
+++ b/managedcare.html
@@ -100,10 +100,10 @@
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
                             <div class="dropdown">
 
-                                <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
-                                <a id="glossary" href="./glossary"> Glossary</a>
+                                <a id="blog" href="https://www.crayond.com/blog">Blog</a>
+                                <a id="glossary" href="./glossary">Glossary</a>
                                 <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics </a>
+                                10px;margin-left:10px !important;margin-bottom:1 px solid">Saas Metrics</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
