--- a/products.html
+++ b/products.html
@@ -126,6 +126,9 @@ input:focus:invalid {
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
+                                <a id="saas-metrics" href="/casestudy.html" style="text-align: center !important;padding-left:
+                                10px;margin-left:10px !important;">Case Studies </a>
+                               </div>
                                </div>
                            </span>
                            <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -163,6 +166,7 @@ input:focus:invalid {
                <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
+               <li class="sub-menu"><a href="./casestudy.html">Case Studies</a></li>
                
                <li class="menu-item"><a href="./contact">Contact</a>
                </li>
