worked on csk page

--- a/csk.html
+++ b/csk.html
@@ -529,7 +529,7 @@
 
                                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 " style="margin-top:30px">
 
-                                    <img   alt="group897"src="images/csk assets/Group 6231.svg" style="width:100%">
+                                    <img   alt="group897"src="images/csk assets/Group-6542.png" style="width:100%">
 
                                 </div>
 
@@ -698,7 +698,7 @@
 
                     <div class="row img_main_1">
                         <div class=" col-6 col-xs-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 img_section_1">
-                            <img class="images_component_3"  alt="group897" src="images/csk assets/csk01-04.png">
+                            <img class="images_component_3"  alt="group897" src="images/csk assets/Group-6545.png">
                         </div>
                         <div class=" col-6 col-xs-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 img_section_1">
                             <img class="images_component_3"  alt="group897" src="images/csk assets/Group 6514.svg">
