--- a/managedcare.html
+++ b/managedcare.html
@@ -97,7 +97,7 @@
                                 href="/products">Products</a>
                             <tag>NEW</tag>
                         </span>
-                        <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
+                        <span class="span-position"><span class="fontLatoRegular resources" target="_blank">Resources</span>
                             <div class="dropdown">
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
