worked on case studies pages

--- a/case-studies.html
+++ b/case-studies.html
@@ -110,8 +110,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
-                                <a id="Saas metrics" href="./saas-metrics.html" style="margin-left:10px !important;padding-left:
-                        10px;text-align: center !important;">Saas Metrics</a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics </a>
+                                <a id="saasmetrics" href="/case-studies">Case-Studies </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -152,7 +152,8 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
-                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
 
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
@@ -219,7 +220,7 @@
                 </div>
                 <div class="row link">
                     <div class="col-12 view">
-                       <a class="view_link" href="Locuscare.html">READ MORE
+                       <a class="view_link" href="/Locuscare">READ MORE
                            <i class="fas fa-arrow-right arrow"></i></a>
                     </div>
                 </div>
@@ -268,7 +269,7 @@
           </div>
           <div class="row link">
             <div class="col-12 view">
-               <a class="view_link" href="/csk.html">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
+               <a class="view_link" href="/csk">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
             </div>
         </div>
 
@@ -304,7 +305,7 @@
           </div>
           <div class="row link">
             <div class="col-12 view">
-               <a class="view_link" href="/managedcare.html">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
+               <a class="view_link" href="/managedcare">READ MORE<i class="fas fa-arrow-right arrow"></i></a>
             </div>
         </div>
 
