--- a/Locuscare.html
+++ b/Locuscare.html
@@ -108,8 +108,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
-                                <a id="Saas metrics" href="./saas-metrics.html" style="margin-left:10px !important;padding-left:
-                                10px;text-align: center !important;">Saas Metrics</a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -150,7 +150,9 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
-                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+            <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
+            
 
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
@@ -677,7 +679,7 @@
         <div class="container notification" style="margin-top: 6%;">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="row notification1" style="margin-top: 25%;">
+                    <div class="row notification1" style="margin-top:25%;">
                         <div class="col-12" style="text-align:left;">
                             <a class="family_title">Notifications</a>
                         </div>
