--- a/contact.html
+++ b/contact.html
@@ -96,8 +96,8 @@
                                     
                                     <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                     <a id="glossary" href="./glossary"> Glossary</a>
-                                    <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics </a>
+                                    <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                    <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                                 </div>
                             </span>
                             <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -135,6 +135,7 @@
                 <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
