--- a/csk.html
+++ b/csk.html
@@ -103,8 +103,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
-                                <a id="Saas metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics</a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -145,7 +145,8 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
-                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="/case-studies">Case-Studies</a></li>
 
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
