--- a/managedcare.html
+++ b/managedcare.html
@@ -102,8 +102,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
-                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;margin-bottom:1 px solid">Saas Metrics</a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -145,6 +145,8 @@
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
+                
 
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
