--- a/products.html
+++ b/products.html
@@ -124,10 +124,8 @@ input:focus:invalid {
                                    
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
-                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics </a>
-                                <a id="saas-metrics" href="/casestudy.html" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Case Studies </a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                 <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                                </div>
                                </div>
                            </span>
@@ -165,8 +163,8 @@ input:focus:invalid {
                </li>
                <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
-               <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
-               <li class="sub-menu"><a href="./casestudy.html">Case Studies</a></li>
+               <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+               <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
                
                <li class="menu-item"><a href="./contact">Contact</a>
                </li>
