worked on changes in case study pages

--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -112,8 +112,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="/glossary"> Glossary</a>
-                                <a id="Saas metrics" href="/saas-metrics/index" style="margin-left:10px !important;padding-left:
-                                10px;text-align: center !important;">Saas Metrics</a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -155,6 +155,7 @@
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="/glossary">Glossary</a></li>
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
 
                 <li class="menu-item"><a href="/contact">Contact</a>
                 </li>
