--- a/Locuscare.html
+++ b/Locuscare.html
@@ -513,7 +513,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-7" style="width:100%">
                     <img  class="recep_1"  alt="recep"src="images/Locuscare Assessts/03 - 01 - Reception Admin - Patients@2x@2x.png"
-                        style="width:100%;position:relative;bottom: 30px;">
+                        style="width:100%;position:relative;top:20px">
                 </div>
 
             </div>
