--- a/saas-metrics/revenue-churn.html
+++ b/saas-metrics/revenue-churn.html
@@ -117,8 +117,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
-                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics </a>
+                                <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
+                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -165,6 +165,7 @@
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
@@ -258,7 +259,7 @@
 
                 <div id="id10" class="head_theme" style="color: #595959;">
                     <h4 class="head_theme fontGraphikSemibold">
-                        10.Revenue Churn Rate
+                        Revenue Churn Rate
                     </h4>
                     <div class="dotted_line" style="position:relative;bottom:15px;"><img src="/images/line-2.png"
                         style="width:160px;height: 2px;" alt="">
