worked on changes

--- a/managedcare.html
+++ b/managedcare.html
@@ -361,19 +361,18 @@
                 
                 <div class="col-12 col-lg-6 col-xl-6">
                     <div class="row">
-                        <p class="weeks">12 Weeks</p>
+                        <p class="weeks">4 Weeks</p>
                     </div>
                     <div class="row">
-                        <p class="planning_evegelism">Excecution</p>
+                        <p class="planning_evegelism">Design + Evengelism</p>
                     </div>
                     <div class="row">
                         <ul class="lists_order">
-                            <li class="list_details">Planning sprints and understanding the backlogs.</li>
-                            <li class="list_details">Sprint execution.
+                            <li class="list_details">The design team was split into groups with their own set of responsibilities.</li>
+                            <li class="list_details">Groups would brainstorm on their own and work on information architecture, craft user journeys, and get back to craft wireframes
                             </li>
                             <li class="list_details">Validating the data and ideas.</li>
-                            <li class="list_details">Sprint review along with the dev, design team, and stakeholders in which the product proceeding was demoed</li>
-                            <li class="list_details">Sprint retrospective for better planning.</li>
+                            <li class="list_details">Finalizing the base scope of the project.</li>
                         </ul>
                     </div>
 
@@ -393,18 +392,20 @@
                 </div>
                 <div class="col-12 col-lg-6 col-xl-6">
                     <div class="row">
-                        <p class="weeks">2 Weeks</p>
+                        <p class="weeks">12 Weeks</p>
                     </div>
                     <div class="row">
-                        <p class="planning_evegelism">Planning + Evengelism</p>
+                        <p class="planning_evegelism">Excecution</p>
                     </div>
                     <div class="row">
                         <ul class="lists_order">
-                            <li class="list_details">Understanding the market landscape and target users.</li>
-                            <li class="list_details">Identifying/collecting key requirements from the Managedcare team.
+                            <li class="list_details">Planning sprints and understanding the backlogs.</li>
+                            <li class="list_details">Sprint execution.
                             </li>
                             <li class="list_details">Validating the data and ideas.</li>
-                            <li class="list_details">Finalizing the base scope of the project.</li>
+                            <li class="list_details">Sprint review along with the dev, design team, and stakeholders in which the product proceeding was demoed</li>
+                            <li class="list_details">Sprint retrospective for better planning.</li>
+                        </ul> 
                         </ul>
                     </div>
                 </div>
